feat: implement sendTransaction RPC

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace.package]
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 license = "Apache-2.0"
+readme = "README.md"
 repository = "https://github.com/txtx/surfpool"
 keywords = ["solana-programs", "web3", "solana", "blockchains"]
 categories = ["cryptography"]
