--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "surfpool-cli"
 description = "Where you train before surfing Solana"
+readme = { workspace = true }
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
