--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -15,3 +15,13 @@ path = "src/main.rs"
 
 [dependencies]
 surfpool-core = { workspace = true }
+hiro-system-kit = "0.3.1"
+atty = "0.2.13"
+clap = { version = "4.5.27", features = ["derive"], optional = true }
+clap_generate = { version = "3.0.3", optional = true }
+toml = { version = "0.8.2", features = ["preserve_order"], optional = true }
+ctrlc = { version = "3.4.5", optional = true }
+
+[features]
+default = ["cli"]
+cli = ["clap", "clap_generate", "toml", "ctrlc", "hiro-system-kit/log"]
