--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -25,6 +25,7 @@ clap_generate = "3.0.3"
 clap_complete = "4.5.44"
 crossterm = "0.28.1"
 ratatui = "0.29.0"
+chrono = "0.4"
 
 [features]
 default = ["cli"]
