--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -42,6 +42,7 @@ litesvm = "0.5.0"
 solana-sdk = "2.1.10"
 solana-program-test = "2.1.10"
 solana-rpc-client = "2.1.10"
+solana-account = "2.1.10"
 solana-account-decoder = "2.1.10"
 solana-accounts-db = "2.1.10"
 solana-client = "2.1.10"
