--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,13 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: Swatinem/rust-cache@v2
-      - name: Rustup install nightly
-        run: rustup toolchain install nightly
       - name: Rustup install rustfmt
-        run: rustup component add rustfmt --toolchain nightly
+        run: rustup component add rustfmt
       - name: Run Cargo fmt
-        run: cargo +nightly fmt --all -- --check
+        run: cargo fmt --all -- --check
       - name: Run Cargo clippy
         run: cargo clippy --all-targets --all-features
   build:
