--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -15,6 +15,11 @@ path = "src/main.rs"
 
 [dependencies]
 surfpool-core = { workspace = true }
+# surfpool-core = { version = "0.1" }
+# txtx-core = { path = "../../../txtx/crates/txtx-core" }
+# txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../../../txtx/addons/svm" }
+txtx-core = { version = "0.2.1" }
+txtx-addon-network-svm = { version = "0.1.0" }
 hiro-system-kit = "0.3.1"
 atty = "0.2.13"
 ansi_term = "0.12.1"
@@ -26,6 +31,12 @@ clap_complete = "4.5.44"
 crossterm = "0.28.1"
 ratatui = "0.29.0"
 chrono = "0.4"
+serde = "1.0.217"
+serde_json = "1.0.138"
+anyhow = "1.0.95"
+url = "2.5.4"
+dialoguer = "0.11.0"
+mustache = "0.9.0"
 
 [features]
 default = ["cli"]
