feat: iteration on runbooks logs

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -37,6 +37,7 @@ jsonrpc-http-server = "18.0.0"
 libc = "0.2.169"
 regex = "1.11.1"
 litesvm = "0.5.0"
+crossbeam = "0.8.4"
 # litesvm = { path = "../../../litesvm/crates/litesvm" }
 
 solana-sdk = "2.1.10"
