--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -19,7 +19,7 @@ surfpool-core = { workspace = true }
 # txtx-core = { path = "../../../txtx/crates/txtx-core" }
 # txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../../../txtx/addons/svm" }
 txtx-core = { version = "0.2.1" }
-txtx-addon-network-svm = { version = "0.1.1" }
+txtx-addon-network-svm = { version = "0.1.2" }
 hiro-system-kit = "0.3.1"
 atty = "0.2.13"
 ansi_term = "0.12.1"
@@ -39,7 +39,13 @@ dialoguer = "0.11.0"
 mustache = "0.9.0"
 crossbeam = "0.8.4"
 dirs = "6.0.0"
+tokio = "1.43.0"
+actix-web = "4"
+actix-cors = "0.7.0"
+rust-embed="8.2.0"
+mime_guess = "2.0.4"
 
 [features]
 default = ["cli"]
 cli = ["clap", "toml", "ctrlc", "hiro-system-kit/log"]
+explorer = []
