--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -18,7 +18,6 @@ base64 = "0.22.1"
 bincode = "1.3.3"
 crossbeam-channel = "0.5.14"
 log = "0.4.22"
-clap = "4.5.27"
 serde = "1.0.217"
 serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = "1.0.135"
@@ -37,9 +36,8 @@ jsonrpc-http-server = "18.0.0"
 libc = "0.2.169"
 regex = "1.11.1"
 litesvm = { version = "0.5.0", features = ["nodejs-internal"] }
-crossbeam = "0.8.4"
 # litesvm = { path = "../../../litesvm/crates/litesvm" }
-
+crossbeam = "0.8.4"
 solana-sdk = "=2.1.10"
 solana-program-test = "2.1.10"
 solana-rpc-client = "2.1.10"
@@ -72,3 +70,7 @@ spl-token-2022 = "4.0.0"
 spl-token = "7.0.0"
 solana-streamer = "2.1.10"
 zstd = "0.13.2"
+agave-geyser-plugin-interface = "2.1.10"
+solana-geyser-plugin-manager = "2.1.10"
+libloading = "0.7.4"
+json5 = "0.4.1"
