--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -31,7 +31,7 @@ hiro-system-kit = { version = "0.3.4" }
 chrono = "0.4"
 jsonrpc-core = "18.0.0"
 jsonrpc-derive = "18.0.0"
-jsonrpc-core-client = "18.0.0"
+jsonrpc-core-client = { version = "18.0.0", features = ["http"] }
 jsonrpc-http-server = "18.0.0"
 libc = "0.2.169"
 regex = "1.11.1"
