--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,43 @@ categories = ["cryptography"]
 [workspace]
 members = [
     "crates/cli",
-    "crates/core"
+    "crates/core",
+    "crates/subgraph"
 ]
 default-members = ["crates/cli"]
 resolver = "2"
 
 [workspace.dependencies]
 surfpool-core = { path = "crates/core", default-features = false }
+agave-geyser-plugin-interface = "2.1.10"
+solana-sdk = "=2.1.10"
+solana-program = "2.1.10"
+solana-program-test = "2.1.10"
+solana-rpc-client = "2.1.10"
+solana-account = "2.1.10"
+solana-account-decoder = "2.1.10"
+solana-accounts-db = "2.1.10"
+solana-client = "2.1.10"
+solana-entry = "2.1.10"
+solana-faucet = "2.1.10"
+solana-feature-set = "2.1.10"
+solana-gossip = "2.1.10"
+solana-inline-spl = "2.1.10"
+solana-ledger = "2.1.10"
+solana-metrics = "2.1.10"
+solana-perf = "2.1.10"
+solana-rpc-client-api = "2.1.10"
+solana-rpc = "2.1.10"
+solana-runtime = "2.1.10"
+solana-runtime-transaction = "2.1.10"
+solana-send-transaction-service = "2.1.10"
+solana-stake-program = "2.1.10"
+solana-storage-bigtable = "2.1.10"
+solana-transaction-status = "2.1.10"
+solana-vote-program = "2.1.10"
+solana-version = "2.1.10"
+solana-poh = "2.1.10"
+solana-svm = "2.1.10"
+solana-program-runtime = "2.1.10"
+solana-geyser-plugin-manager = "2.1.10"
+solana-streamer = "2.1.10"
