--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace.package]
 version = "0.1.7"
 edition = "2021"
+description = "Surfpool is the best place to train before surfing Solana."
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/txtx/surfpool"
@@ -11,6 +12,7 @@ categories = ["cryptography"]
 members = [
     "crates/cli",
     "crates/core",
+    "crates/gql",
     "crates/subgraph"
 ]
 default-members = ["crates/cli"]
@@ -18,6 +20,7 @@ resolver = "2"
 
 [workspace.dependencies]
 surfpool-core = { path = "crates/core", default-features = false }
+surfpool-gql = { path = "crates/gql", default-features = false }
 agave-geyser-plugin-interface = "2.1.10"
 solana-sdk = "=2.1.10"
 solana-program = "2.1.10"
@@ -50,3 +53,7 @@ solana-svm = "2.1.10"
 solana-program-runtime = "2.1.10"
 solana-geyser-plugin-manager = "2.1.10"
 solana-streamer = "2.1.10"
+txtx-core = { path = "../txtx/crates/txtx-core" }
+txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
+# txtx-core = { version = "0.2.2" }
+# txtx-addon-network-svm = { version = "0.1.3" }
