--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -74,3 +74,5 @@ spl-token = "7.0.0"
 zstd = "0.13.2"
 libloading = "0.7.4"
 json5 = "0.4.1"
+txtx-addon-network-svm = { workspace = true }
+uuid = "1.7.0"
