--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,13 @@ solana-svm = "2.1.10"
 solana-program-runtime = "2.1.10"
 solana-geyser-plugin-manager = "2.1.10"
 solana-streamer = "2.1.10"
+ipc-channel = "0.19.0"
+serde = "1.0.217"
+serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
+serde_json = "1.0.135"
 txtx-core = { path = "../txtx/crates/txtx-core" }
 txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
+bincode = "1.3.3"
+
 # txtx-core = { version = "0.2.2" }
 # txtx-addon-network-svm = { version = "0.1.3" }
