--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,12 +15,12 @@ path = "src/lib.rs"
 
 [dependencies]
 base64 = "0.22.1"
-bincode = "1.3.3"
+bincode = { workspace = true }
 crossbeam-channel = "0.5.14"
 log = "0.4.22"
-serde = "1.0.217"
-serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
-serde_json = "1.0.135"
+serde = { workspace = true }
+serde_derive = { workspace = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
+serde_json = { workspace = true }
 itertools = "0.14.0"
 symlink = "0.1.0"
 tokio = "1.43.0"
@@ -76,3 +76,4 @@ libloading = "0.7.4"
 json5 = "0.4.1"
 txtx-addon-network-svm = { workspace = true }
 uuid = "1.7.0"
+ipc-channel = { workspace = true }
