--- a/crates/subgraph/Cargo.toml
+++ b/crates/subgraph/Cargo.toml
@@ -15,3 +15,8 @@ crate-type = ["cdylib", "rlib"]
 agave-geyser-plugin-interface = { workspace = true }
 solana-program = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
+ipc-channel = { workspace = true }
+surfpool-core = { workspace = true }
+serde_json = { workspace = true }
+serde = { workspace = true }
+bincode = { workspace = true }
