--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,6 @@ serde_json = "1.0.135"
 txtx-core = { path = "../txtx/crates/txtx-core" }
 txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
 bincode = "1.3.3"
-
+uuid = "1.7.0"
 # txtx-core = { version = "0.2.2" }
 # txtx-addon-network-svm = { version = "0.1.3" }
