--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -44,8 +44,9 @@ actix-cors = "0.7.0"
 rust-embed="8.2.0"
 mime_guess = "2.0.4"
 notify = { version = "8.0.0" }
-juniper_actix = {version = "0.5.0", features = ["subscriptions"] }
+juniper_actix = {version = "0.6.0", features = ["subscriptions"] }
 juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
+juniper = { version = "0.16.1", features = ["schema-language"] }
 ipc-channel = { workspace = true }
 bincode = { workspace = true }
 
