--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -49,6 +49,7 @@ juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
 juniper = { version = "0.16.1", features = ["schema-language"] }
 ipc-channel = { workspace = true }
 bincode = { workspace = true }
+convert_case = "0.7.1"
 
 [features]
 default = ["cli"]
