--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,9 +57,9 @@ ipc-channel = "0.19.0"
 serde = "1.0.217"
 serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = "1.0.135"
-txtx-core = { path = "../txtx/crates/txtx-core" }
-txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
+# txtx-core = { path = "../txtx/crates/txtx-core" }
+# txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
+txtx-core = { version = "0.2.3" }
+txtx-addon-network-svm = { version = "0.1.4" }
 bincode = "1.3.3"
 uuid = "1.7.0"
-# txtx-core = { version = "0.2.2" }
-# txtx-addon-network-svm = { version = "0.1.3" }
