--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace.package]
-version = "0.1.7"
+version = "0.1.8"
 edition = "2021"
+description = "Surfpool is the best place to train before surfing Solana."
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/txtx/surfpool"
@@ -10,10 +11,55 @@ categories = ["cryptography"]
 [workspace]
 members = [
     "crates/cli",
-    "crates/core"
+    "crates/core",
+    "crates/gql",
+    "crates/subgraph"
 ]
 default-members = ["crates/cli"]
 resolver = "2"
 
 [workspace.dependencies]
 surfpool-core = { path = "crates/core", default-features = false }
+surfpool-gql = { path = "crates/gql", default-features = false }
+agave-geyser-plugin-interface = "2.1.10"
+solana-sdk = "=2.1.10"
+solana-program = "2.1.10"
+solana-program-test = "2.1.10"
+solana-rpc-client = "2.1.10"
+solana-account = "2.1.10"
+solana-account-decoder = "2.1.10"
+solana-accounts-db = "2.1.10"
+solana-client = "2.1.10"
+solana-entry = "2.1.10"
+solana-faucet = "2.1.10"
+solana-feature-set = "2.1.10"
+solana-gossip = "2.1.10"
+solana-inline-spl = "2.1.10"
+solana-ledger = "2.1.10"
+solana-metrics = "2.1.10"
+solana-perf = "2.1.10"
+solana-rpc-client-api = "2.1.10"
+solana-rpc = "2.1.10"
+solana-runtime = "2.1.10"
+solana-runtime-transaction = "2.1.10"
+solana-send-transaction-service = "2.1.10"
+solana-stake-program = "2.1.10"
+solana-storage-bigtable = "2.1.10"
+solana-transaction-status = "2.1.10"
+solana-vote-program = "2.1.10"
+solana-version = "2.1.10"
+solana-poh = "2.1.10"
+solana-svm = "2.1.10"
+solana-program-runtime = "2.1.10"
+solana-geyser-plugin-manager = "2.1.10"
+solana-streamer = "2.1.10"
+ipc-channel = "0.19.0"
+serde = "1.0.217"
+serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
+serde_json = "1.0.135"
+# txtx-core = { path = "../txtx/crates/txtx-core" }
+# txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
+txtx-core = { version = "0.2.3" }
+txtx-addon-network-svm = { version = "0.1.4" }
+bincode = "1.3.3"
+uuid = "1.7.0"
