--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -15,11 +15,10 @@ path = "src/main.rs"
 
 [dependencies]
 surfpool-core = { workspace = true }
+surfpool-gql = { workspace = true }
 # surfpool-core = { version = "0.1" }
-# txtx-core = { path = "../../../txtx/crates/txtx-core" }
-# txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../../../txtx/addons/svm" }
-txtx-core = { version = "0.2.2" }
-txtx-addon-network-svm = { version = "0.1.3" }
+txtx-core = { workspace = true }
+txtx-addon-network-svm = { workspace = true }
 hiro-system-kit = "0.3.1"
 atty = "0.2.13"
 ansi_term = "0.12.1"
@@ -44,6 +43,13 @@ actix-web = "4"
 actix-cors = "0.7.0"
 rust-embed="8.2.0"
 mime_guess = "2.0.4"
+notify = { version = "8.0.0" }
+juniper_actix = {version = "0.6.0", features = ["subscriptions"] }
+juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
+juniper = { version = "0.16.1", features = ["schema-language"] }
+ipc-channel = { workspace = true }
+bincode = { workspace = true }
+convert_case = "0.7.1"
 
 [features]
 default = ["cli"]
