--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,12 +15,12 @@ path = "src/lib.rs"
 
 [dependencies]
 base64 = "0.22.1"
-bincode = "1.3.3"
+bincode = { workspace = true }
 crossbeam-channel = "0.5.14"
 log = "0.4.22"
-serde = "1.0.217"
-serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
-serde_json = "1.0.135"
+serde = { workspace = true }
+serde_derive = { workspace = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
+serde_json = { workspace = true }
 itertools = "0.14.0"
 symlink = "0.1.0"
 tokio = "1.43.0"
@@ -38,42 +38,45 @@ regex = "1.11.1"
 litesvm = { version = "0.5.0", features = ["nodejs-internal"] }
 # litesvm = { path = "../../../litesvm/crates/litesvm" }
 crossbeam = "0.8.4"
-solana-sdk = "=2.1.10"
-solana-program-test = "2.1.10"
-solana-rpc-client = "2.1.10"
-solana-account = "2.1.10"
-solana-account-decoder = "2.1.10"
-solana-accounts-db = "2.1.10"
-solana-client = "2.1.10"
-solana-entry = "2.1.10"
-solana-faucet = "2.1.10"
-solana-feature-set = "2.1.10"
-solana-gossip = "2.1.10"
-solana-inline-spl = "2.1.10"
-solana-ledger = "2.1.10"
-solana-metrics = "2.1.10"
-solana-perf = "2.1.10"
-solana-rpc-client-api = "2.1.10"
-solana-rpc = "2.1.10"
-solana-runtime = "2.1.10"
-solana-runtime-transaction = "2.1.10"
-solana-send-transaction-service = "2.1.10"
-solana-stake-program = "2.1.10"
-solana-storage-bigtable = "2.1.10"
-solana-transaction-status = "2.1.10"
-solana-vote-program = "2.1.10"
-solana-version = "2.1.10"
-solana-poh = "2.1.10"
-solana-svm = "2.1.10"
-solana-program-runtime = "2.1.10"
+agave-geyser-plugin-interface = { workspace = true }
+solana-sdk = { workspace = true }
+solana-program-test = { workspace = true }
+solana-rpc-client = { workspace = true }
+solana-account = { workspace = true }
+solana-account-decoder = { workspace = true }
+solana-accounts-db = { workspace = true }
+solana-client = { workspace = true }
+solana-entry = { workspace = true }
+solana-faucet = { workspace = true }
+solana-feature-set = { workspace = true }
+solana-gossip = { workspace = true }
+solana-inline-spl = { workspace = true }
+solana-ledger = { workspace = true }
+solana-metrics = { workspace = true }
+solana-perf = { workspace = true }
+solana-rpc-client-api = { workspace = true }
+solana-rpc = { workspace = true }
+solana-runtime = { workspace = true }
+solana-runtime-transaction = { workspace = true }
+solana-send-transaction-service = { workspace = true }
+solana-stake-program = { workspace = true }
+solana-storage-bigtable = { workspace = true }
+solana-transaction-status = { workspace = true }
+solana-vote-program = { workspace = true }
+solana-version = { workspace = true }
+solana-poh = { workspace = true }
+solana-svm = { workspace = true }
+solana-program-runtime = { workspace = true }
+solana-geyser-plugin-manager = { workspace = true }
+solana-streamer = { workspace = true }
 spl-token-2022 = "6.0.0"
 spl-token = "7.0.0"
-solana-streamer = "2.1.10"
 zstd = "0.13.2"
-agave-geyser-plugin-interface = "2.1.10"
-solana-geyser-plugin-manager = "2.1.10"
 libloading = "0.7.4"
 json5 = "0.4.1"
+txtx-addon-network-svm = { workspace = true }
+uuid = "1.7.0"
+ipc-channel = { workspace = true }
 
 [dev-dependencies]
 test-case = "^3.3.1"
