--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -20,5 +20,5 @@ juniper_codegen = { version = "0.16.0" }
 # juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
 async-stream = "0.3.5"
 tokio = "1.37.0"
-surfpool-core = { workspace = true }
+surfpool-types = { workspace = true }
 convert_case = "0.7.1"
