--- a/crates/subgraph/Cargo.toml
+++ b/crates/subgraph/Cargo.toml
@@ -16,8 +16,9 @@ agave-geyser-plugin-interface = { workspace = true }
 solana-program = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
 ipc-channel = { workspace = true }
-surfpool-core = { workspace = true }
+surfpool-types = { workspace = true }
 serde_json = { workspace = true }
 serde = { workspace = true }
 bincode = { workspace = true }
 uuid = { workspace = true }
+bs58 = "0.5.1"
