--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -74,6 +74,7 @@ zstd = "0.13.2"
 libloading = "0.7.4"
 json5 = "0.4.1"
 txtx-addon-network-svm = { workspace = true }
+txtx-core = {workspace = true }
 uuid = "1.7.0"
 ipc-channel = { workspace = true }
 
