--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -15,7 +15,7 @@ categories = { workspace = true }
 futures = { version = "0.3.22", features = ["alloc"], default-features = false }
 futures-enum = { version = "0.1.12", default-features = false }
 uuid = { version = "1.6.1", features = ["serde", "v7"] }
-juniper = { version = "0.16.1" }
+juniper = { version = "0.16.1", features = ["uuid"] }
 juniper_codegen = { version = "0.16.0" }
 # juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
 async-stream = "0.3.5"
@@ -24,3 +24,4 @@ surfpool-types = { workspace = true }
 convert_case = "0.7.1"
 txtx-core = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
+serde = { version = "1.0.122"}
