chore: dependency clean-up

--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -22,6 +22,9 @@ async-stream = "0.3.5"
 tokio = "1.37.0"
 surfpool-types = { workspace = true }
 convert_case = "0.7.1"
-txtx-core = { workspace = true }
-txtx-addon-network-svm = { workspace = true }
+txtx-addon-kit = { workspace = true }
+solana-pubkey = { workspace = true }
 serde = { version = "1.0.122"}
+
+[dev-dependencies]
+solana-sdk = { workspace = true }
