--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,45 +24,58 @@ surfpool-core = { path = "crates/core", default-features = false }
 surfpool-gql = { path = "crates/gql", default-features = false }
 surfpool-subgraph = { path = "crates/subgraph", default-features = false }
 surfpool-types = { path = "crates/types", default-features = false }
-agave-geyser-plugin-interface = "2.1.10"
-solana-sdk = "=2.1.10"
-solana-program = "2.1.10"
-solana-program-test = "2.1.10"
-solana-rpc-client = "2.1.10"
-solana-account = "2.1.10"
-solana-account-decoder = "2.1.10"
-solana-accounts-db = "2.1.10"
-solana-client = "2.1.10"
-solana-entry = "2.1.10"
-solana-faucet = "2.1.10"
-solana-feature-set = "2.1.10"
-solana-gossip = "2.1.10"
-solana-inline-spl = "2.1.10"
-solana-ledger = "2.1.10"
-solana-metrics = "2.1.10"
-solana-perf = "2.1.10"
-solana-rpc-client-api = "2.1.10"
-solana-rpc = "2.1.10"
-solana-runtime = "2.1.10"
-solana-runtime-transaction = "2.1.10"
-solana-send-transaction-service = "2.1.10"
-solana-stake-program = "2.1.10"
-solana-storage-bigtable = "2.1.10"
-solana-transaction-status = "2.1.10"
-solana-vote-program = "2.1.10"
-solana-version = "2.1.10"
-solana-poh = "2.1.10"
-solana-svm = "2.1.10"
-solana-program-runtime = "2.1.10"
-solana-geyser-plugin-manager = "2.1.10"
-solana-streamer = "2.1.10"
+litesvm = { version = "0.6.0", features = ["nodejs-internal"] }
+agave-geyser-plugin-interface = "2.2.1"
+solana-sdk = "2.2.1"
+solana-program = "2.2.1"
+solana-program-test = "2.2.1"
+solana-rpc-client = "2.2.1"
+solana-account = "2.2.1"
+solana-account-decoder = "2.2.1"
+solana-accounts-db = "2.2.1"
+solana-client = "2.2.1"
+solana-entry = "2.2.1"
+solana-faucet = "2.2.1"
+solana-feature-set = "2.2.1"
+solana-gossip = "2.2.1"
+solana-pubkey = { version = "2.2.1", features = ["serde"]}
+solana-transaction-context = { version = "2.2.1", features = ["serde"]}
+solana-clock = { version = "2.2.1", features = ["serde"]}
+solana-blake3-hasher = { version = "2.2.1", features = ["serde"]}
+solana-epoch-info = { version = "2.2.1", features = ["serde"]}
+solana-message = { version = "2.2.1", features = ["serde"]}
+solana-signature = { version = "2.2.1", features = ["serde"]}
+solana-transaction = { version = "2.2.1", features = ["serde"]}
+solana-transaction-error = { version = "2.2.1", features = ["serde"]}
+solana-inline-spl = "2.2.1"
+solana-ledger = "2.2.1"
+solana-metrics = "2.2.1"
+solana-perf = "2.2.1"
+solana-rpc-client-api = "2.2.1"
+solana-rpc = "2.2.1"
+solana-runtime = "2.2.1"
+solana-runtime-transaction = "2.2.1"
+solana-send-transaction-service = "2.2.1"
+solana-stake-program = "2.2.1"
+solana-storage-bigtable = "2.2.1"
+solana-transaction-status = "2.2.1"
+solana-vote-program = "2.2.1"
+solana-version = "2.2.1"
+solana-poh = "2.2.1"
+solana-svm = "2.2.1"
+solana-program-runtime = "2.2.1"
+solana-geyser-plugin-manager = "2.2.1"
+solana-streamer = "2.2.1"
 ipc-channel = "0.19.0"
 serde = "1.0.217"
 serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = "1.0.135"
+# txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit", features = ["wasm"]}
 # txtx-core = { path = "../txtx/crates/txtx-core" }
 # txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
+txtx-addon-kit = { version = "0.2.4" }
 txtx-core = { version = "0.2.4" }
-txtx-addon-network-svm = { version = "0.1.7" }
+txtx-addon-network-svm = { version = "0.1.8" }
 bincode = "1.3.3"
-uuid = "1.7.0"
+uuid = "1.15.1"
+anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
