--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -36,7 +36,7 @@ jsonrpc-core-client = { version = "18.0.0", features = ["http"] }
 jsonrpc-http-server = "18.0.0"
 libc = "0.2.169"
 regex = "1.11.1"
-litesvm = { version = "0.5.0", features = ["nodejs-internal"] }
+litesvm = { workspace = true }
 # litesvm = { path = "../../../litesvm/crates/litesvm" }
 crossbeam = "0.8.4"
 agave-geyser-plugin-interface = { workspace = true }
@@ -70,7 +70,7 @@ solana-svm = { workspace = true }
 solana-program-runtime = { workspace = true }
 solana-geyser-plugin-manager = { workspace = true }
 solana-streamer = { workspace = true }
-spl-token-2022 = "6.0.0"
+spl-token-2022 = "7.0.0"
 spl-token = "7.0.0"
 zstd = "0.13.2"
 libloading = "0.7.4"
