--- a/crates/subgraph/Cargo.toml
+++ b/crates/subgraph/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["cdylib", "rlib"]
 agave-geyser-plugin-interface = { workspace = true }
 solana-program = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
+txtx-addon-network-svm-types = { workspace = true }
 ipc-channel = { workspace = true }
 surfpool-types = { workspace = true }
 serde_json = { workspace = true }
