--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,9 @@ solana-blake3-hasher = { version = "2.2.1", features = ["serde"]}
 solana-epoch-info = { version = "2.2.1", features = ["serde"]}
 solana-message = { version = "2.2.1", features = ["serde"]}
 solana-signature = { version = "2.2.1", features = ["serde"]}
-solana-transaction = { version = "2.2.1", features = ["serde"]}
+solana-transaction = { version = "2.2.1", features = ["serde", "bincode"]}
 solana-transaction-error = { version = "2.2.1", features = ["serde"]}
+solana-transaction-status = { version = "2.2.2" }
 solana-inline-spl = "2.2.1"
 solana-ledger = "2.2.1"
 solana-metrics = "2.2.1"
@@ -54,7 +55,6 @@ solana-runtime-transaction = "2.2.1"
 solana-send-transaction-service = "2.2.1"
 solana-stake-program = "2.2.1"
 solana-storage-bigtable = "2.2.1"
-solana-transaction-status = "2.2.1"
 solana-vote-program = "2.2.1"
 solana-version = "2.2.1"
 solana-poh = "2.2.1"
@@ -68,10 +68,12 @@ serde_derive = "1.0.217" # must match the serde version, see https://github.com/
 serde_json = "1.0.135"
 # txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit", features = ["wasm"]}
 # txtx-core = { path = "../txtx/crates/txtx-core" }
-# txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
-txtx-addon-kit = { version = "0.2.5" }
-txtx-core = { version = "0.2.5" }
-txtx-addon-network-svm = { version = "0.1.9" }
+# txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm/core" }
+# txtx-addon-network-svm-types = { package = "txtx-addon-network-svm-types", path = "../txtx/addons/svm/types" }
+txtx-addon-kit = { version = "0.2.5", features = ["wasm"] }
+txtx-core = { version = "0.2.7" }
+txtx-addon-network-svm = { version = "0.1.8" }
+txtx-addon-network-svm-types = { version = "0.1.0" }
 bincode = "1.3.3"
 uuid = "1.15.1"
 anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
