--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,9 +69,13 @@ serde_json = "1.0.135"
 # txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit", features = ["wasm"]}
 # txtx-core = { path = "../txtx/crates/txtx-core" }
 # txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
-txtx-addon-kit = { version = "0.2.5" }
-txtx-core = { version = "0.2.5" }
+# txtx-gql = { path = "../txtx/crates/txtx-gql" }
+# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
+txtx-addon-kit = { version = "0.2.6", features = ["wasm"] }
+txtx-core = { version = "0.2.7" }
 txtx-addon-network-svm = { version = "0.1.9" }
+txtx-gql = { version = "0.2.5" }
+txtx-supervisor-ui = { version = "0.1.2" }
 bincode = "1.3.3"
 uuid = "1.15.1"
 anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
