--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -82,6 +82,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Checkout Supervisor UI
+        uses: actions/checkout@v4
+        with:
+          repository: txtx/txtx-supervisor-ui
+          token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
+          path: txtx-supervisor-ui 
+
+      - name: Build .env file for Supervisor UI
+        uses: txtx/txtx/actions/setup_supervisor_env
+        with:
+          txtx_dev_npm_read_token: ${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}
+          nhost_region: ${{ secrets.NHOST_REGION }}
+          nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
+          working_directory: "txtx-supervisor-ui"
 
       # set up rust for all envs
       - name: Install Rust toolchain
