feat(ci): add Supervisor UI build step to release workflow

--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -87,8 +87,8 @@ jobs:
         with:
           repository: txtx/txtx-supervisor-ui
           token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
-          path: txtx-supervisor-ui 
-
+          path: txtx-supervisor-ui
+          
       - name: Build .env file for Supervisor UI
         uses: txtx/txtx/actions/setup_supervisor_env
         with:
@@ -96,6 +96,13 @@ jobs:
           nhost_region: ${{ secrets.NHOST_REGION }}
           nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
           working_directory: "txtx-supervisor-ui"
+
+      - name: Build Supervisor UI
+        run: |
+          cd txtx-supervisor-ui
+          npm run i
+          npm run build
+          cd ..
 
       # set up rust for all envs
       - name: Install Rust toolchain
@@ -138,7 +145,7 @@ jobs:
         
       - name: Build - Cargo
         run: 
-          cargo build --release --locked --target ${{ matrix.target }}
+          cargo build --release --locked --target ${{ matrix.target }} --features supervisor_ui
 
       # Don't compress for Windows because winget can't yet unzip files
       - name: Compress cargo artifact (not windows)
