feat(cli): update supervisor UI integration and version to 0.1.3

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,2 @@
 [alias]
-surfpool-install = "install --path crates/cli --locked --force"
+surfpool-install = "install --path crates/cli --locked --force --features supervisor_ui"
