--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,7 @@ txtx-addon-kit = { version = "0.2.6", features = ["wasm"] }
 txtx-core = { version = "0.2.7" }
 txtx-addon-network-svm = { version = "0.1.9" }
 txtx-gql = { version = "0.2.5" }
-txtx-supervisor-ui = { version = "0.1.2" }
+txtx-supervisor-ui = { version = "0.1.3", default-features = false}
 bincode = "1.3.3"
 uuid = "1.15.1"
 anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
