--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -21,7 +21,7 @@ surfpool-gql = { workspace = true }
 txtx-core = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
 txtx-gql = { workspace = true }
-txtx-supervisor-ui = { workspace = true, optional = true, features = ["release"]}
+txtx-supervisor-ui = { workspace = true, optional = true}
 hiro-system-kit = "0.3.1"
 atty = "0.2.13"
 ansi_term = "0.12.1"
@@ -57,5 +57,5 @@ convert_case = "0.7.1"
 [features]
 default = ["cli"]
 cli = ["clap", "toml", "ctrlc", "hiro-system-kit/log"]
-supervisor_ui = ["txtx-supervisor-ui/release"]
+supervisor_ui = ["txtx-supervisor-ui/crates_build"]
 explorer = []
