--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -90,7 +90,7 @@ jobs:
           path: txtx-supervisor-ui
           
       - name: Build .env file for Supervisor UI
-        uses: txtx/txtx/actions/setup_supervisor_env
+        uses: txtx/txtx/actions/setup_supervisor_env@actions-beta-1
         with:
           txtx_dev_npm_read_token: ${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}
           nhost_region: ${{ secrets.NHOST_REGION }}
