--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,12 +70,12 @@ serde_json = "1.0.135"
 # txtx-core = { path = "../txtx/crates/txtx-core" }
 # txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm" }
 # txtx-gql = { path = "../txtx/crates/txtx-gql" }
-# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui" }
-txtx-addon-kit = { version = "0.2.6", features = ["wasm"] }
-txtx-core = { version = "0.2.7" }
-txtx-addon-network-svm = { version = "0.1.9" }
+# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui", default-features = false, features = ["bin_build"] }
+txtx-addon-kit = { version = "0.2.7", features = ["wasm"] }
+txtx-core = { version = "0.2.8" }
+txtx-addon-network-svm = { version = "0.1.11" }
 txtx-gql = { version = "0.2.5" }
-txtx-supervisor-ui = { version = "0.1.3", default-features = false}
+txtx-supervisor-ui = { version = "0.1.3", default-features = false, features = ["crates_build"]}
 bincode = "1.3.3"
 uuid = "1.15.1"
 anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
