--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -20,7 +20,7 @@ bincode = { workspace = true }
 crossbeam-channel = "0.5.14"
 log = "0.4.22"
 serde = { workspace = true }
-serde_bytes ={ workspace = true }
+serde_with ={ workspace = true }
 serde_derive = { workspace = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = { workspace = true }
 itertools = "0.14.0"
