--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -16,16 +16,6 @@ path = "src/lib.rs"
 agave-geyser-plugin-interface = { workspace = true }
 base64 = "0.22.1"
 bincode = { workspace = true }
-crossbeam-channel = "0.5.14"
-log = "0.4.22"
-serde = { workspace = true }
-serde_with ={ workspace = true }
-serde_derive = { workspace = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
-serde_json = { workspace = true }
-itertools = "0.14.0"
-symlink = "0.1.0"
-tokio = "1.43.0"
-tokio-util = "0.7.13"
 bs58 = "0.5.1"
 chrono = "0.4"
 crossbeam = "0.8.4"
@@ -43,6 +33,7 @@ serde = { workspace = true }
 serde_bytes = { workspace = true }
 serde_derive = { workspace = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = { workspace = true }
+serde_with = { workspace = true }
 solana-account = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-blake3-hasher = { workspace = true }
@@ -61,6 +52,7 @@ solana-pubkey = { workspace = true }
 solana-rpc-client = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-runtime = { workspace = true }
+solana-sdk = { workspace = true }
 solana-signature = { workspace = true }
 solana-signer = { workspace = true }
 solana-system-interface = { workspace = true }
@@ -68,14 +60,12 @@ solana-transaction = { workspace = true }
 solana-transaction-error = { workspace = true } 
 solana-transaction-status = { workspace = true }
 solana-version = { workspace = true }
+spl-associated-token-account = { workspace = true }
 surfpool-subgraph = { workspace = true }
 surfpool-types = { workspace = true }
+symlink = "0.1.0"
 tokio = "1.43.0"
-solana-poh = { workspace = true }
-solana-svm = { workspace = true }
-solana-program-runtime = { workspace = true }
-solana-streamer = { workspace = true }
-spl-associated-token-account = { workspace = true }
+tokio-util = "0.7.13"
 spl-token-2022 = "7.0.0"
 spl-token = "7.0.0"
 zstd = "0.13.2"
