--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,10 +69,11 @@ spl-associated-token-account =  "6.0.0"
 # txtx-core = { path = "../txtx/crates/txtx-core" }
 # txtx-gql = { path = "../txtx/crates/txtx-gql" }
 # txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui", default-features = false, features = ["bin_build"] }
-txtx-addon-kit = { version = "0.2.9", features = ["wasm"] }
-txtx-core = { version = "0.2.12" }
-txtx-addon-network-svm = { version = "0.1.15" }
-txtx-addon-network-svm-types = { version = "0.1.14" }
-txtx-gql = { version = "0.2.5" }
-txtx-supervisor-ui = { version = "0.1.3", default-features = false, features = ["crates_build"]}
+txtx-addon-kit = { version = "0.2.10", features = ["wasm"] }
+txtx-core = { version = "0.2.13" }
+txtx-addon-network-svm = { version = "0.1.16" }
+txtx-addon-network-svm-types = { version = "0.1.16" }
+txtx-gql = { version = "0.2.6" }
+txtx-cloud = "0.1.1"
+txtx-supervisor-ui = { version = "0.1.4", default-features = false, features = ["crates_build"]}
 uuid = "1.15.1"
