fix: tweak request key

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -73,7 +73,7 @@ libloading = "0.7.4"
 json5 = "0.4.1"
 txtx-addon-network-svm-types = { workspace = true }
 uuid = "1.7.0"
-
+blake3 = "1.8.2"
 
 [dev-dependencies]
 test-case = "^3.3.1"
