--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -29,6 +29,7 @@ solana-transaction-error = { workspace = true }
 txtx-addon-network-svm-types = { workspace = true }
 txtx-addon-kit = { workspace = true }
 uuid = { version = "1.7.0", features = ["js"] }
+blake3 = "1.8.2"
 
 [dev-dependencies]
 test-case = "^3.3.1"
