--- a/crates/gql/Cargo.toml
+++ b/crates/gql/Cargo.toml
@@ -18,6 +18,7 @@ juniper = { version = "0.16.1", features = ["uuid"] }
 juniper_codegen = { version = "0.16.0" }
 # juniper_codegen = { git = "https://github.com/graphql-rust/juniper", rev = "c0e1b3e" }
 surfpool-types = { workspace = true }
+# surfpool-types = { version = "0.2.0", default-features = false }
 convert_case = "0.8.0"
 txtx-addon-kit = { workspace = true }
 solana-pubkey = { workspace = true }
