--- a/crates/subgraph/Cargo.toml
+++ b/crates/subgraph/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "surfpool-subgraph"
+description = { workspace = true }
 version = { workspace = true }
 readme = { workspace = true }
 edition = { workspace = true }
@@ -17,6 +18,7 @@ solana-program = { workspace = true }
 txtx-addon-network-svm = { workspace = true }
 txtx-addon-network-svm-types = { workspace = true }
 ipc-channel = { workspace = true }
+# surfpool-types = { version = "0.2.0", default-features = false }
 surfpool-types = { workspace = true }
 serde_json = { workspace = true }
 uuid = { workspace = true }
