--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ resolver = "2"
 [workspace.dependencies]
 agave-geyser-plugin-interface = "2.2.1"
 bincode = "1.3.3"
+crossbeam-channel = "0.5.15"
 hex = "0.4.3"
 ipc-channel = "0.19.0"
 surfpool-core = { path = "crates/core", default-features = false }
