--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -13,7 +13,7 @@ categories = { workspace = true }
 path = "src/lib.rs"
 
 [dependencies]
-crossbeam-channel = "0.5.14"
+crossbeam-channel = { workspace = true }
 serde = { workspace = true }
 serde_derive = { workspace = true } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 chrono = "0.4"
