--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -72,7 +72,7 @@ surfpool-types = { workspace = true }
 # surfpool-types = { version = "0.2.0", default-features = false }
 # surfpool-subgraph = { version = "0.2.0", default-features = false }
 symlink = "0.1.0"
-tokio = "1.43.0"
+tokio = { version = "1.45.0", features = ["full"] }
 tokio-util = "0.7.13"
 spl-token-2022 = "7.0.0"
 spl-token = "7.0.0"
