feat(mcp): implement set-token-account functionality with JSON-RPC integration
- Updated `set_token_account.rs` to handle token balance setting for both SOL and SPL tokens.
- Introduced JSON-RPC request and response structures for better error handling and response parsing.
- Added support for generating new wallets and funding existing ones.
- Updated dependencies in `Cargo.toml` for `reqwest`, `bs58`, and `spl-token`.
- Adjusted workspace dependencies in `crates/mcp/Cargo.toml` for better modularity.

--- a/crates/mcp/Cargo.toml
+++ b/crates/mcp/Cargo.toml
@@ -14,8 +14,15 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["transport-io", "transport-sse-server"], package = "rmcp" }
-tracing = "0.1"
-axum = { version = "0.8", features = ["macros"] }
+tracing = { workspace = true }
+axum = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
+surfpool-types = { workspace = true }
+surfpool-core = { workspace = true }
+reqwest = { workspace = true }
+solana-sdk = { workspace = true }
+spl-associated-token-account = { workspace = true }
+bs58 = { workspace = true }
+spl-token = { workspace = true }
