fix: use function `start_local_surfnet` instead of spawning process

--- a/crates/mcp/Cargo.toml
+++ b/crates/mcp/Cargo.toml
@@ -26,3 +26,4 @@ solana-sdk = { workspace = true }
 spl-associated-token-account = { workspace = true }
 bs58 = { workspace = true }
 spl-token = { workspace = true }
+hiro-system-kit = { workspace = true }
