--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bincode = "1.3.3"
 bs58 = "0.5.0"
 crossbeam-channel = "0.5.15"
 hex = "0.4.3"
+hiro-system-kit = { version = "0.3.4" }
 ipc-channel = "0.19.0"
 surfpool-core = { path = "crates/core", default-features = false }
 surfpool-gql = { path = "crates/gql", default-features = false }
