feat(core/rpc): implement getRecentPrioritizationFees RPC endpoint

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/lib.rs"
 agave-geyser-plugin-interface = { workspace = true }
 base64 = "0.22.1"
 bincode = { workspace = true }
+borsh = { workspace = true }
 bs58 = "0.5.1"
 chrono = "0.4"
 crossbeam = "0.8.4"
