--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ resolver = "2"
 [workspace.dependencies]
 agave-geyser-plugin-interface = "2.2.1"
 bincode = "1.3.3"
+borsh = "1.5.5"
 crossbeam-channel = "0.5.15"
 hex = "0.4.3"
 ipc-channel = "0.19.0"
